@@ -1,0 +1,2 @@
+require 'rjack-slf4j'
+RJack::SLF4J.require_adapter( 'jcl-over-slf4j' )
