@@ -25,17 +25,17 @@
 
 $LOAD_PATH.unshift File.join( File.dirname(__FILE__), "..", "lib" )
 
-require 'slf4j'
+require 'rjack-slf4j'
 
 # Load jdk14 implementation for testing
-require 'slf4j/jdk14'
+require 'rjack-slf4j/jdk14'
 
 # Now safe to load:
-require 'slf4j/mdc'
+require 'rjack-slf4j/mdc'
 
 # Load these only to confirm loading works
-require 'slf4j/jcl-over-slf4j'
-require 'slf4j/log4j-over-slf4j'
+require 'rjack-slf4j/jcl-over-slf4j'
+require 'rjack-slf4j/log4j-over-slf4j'
 
 require 'test/unit'
 
@@ -139,7 +139,7 @@ class TestSlf4j < Test::Unit::TestCase
 
   def test_circular_ban
     assert_raise( RuntimeError ) do
-      require 'slf4j/jul-to-slf4j'
+      require 'rjack-slf4j/jul-to-slf4j'
     end
   end
 
